standing authority - wording
(cherry picked from commit c019a8cf84999fa729c905715ae783e3934ba701)

--- a/cash.html
+++ b/cash.html
@@ -1723,8 +1723,8 @@
                     <br>
                     <li>
                         <input type="checkbox" name="" id="credit" class="checkbox-checked">
-                        <label for="credit">將款項存入本人/吾等/本公司在上列銀行之港幣儲蓄/往來帳戶.-
-                            Credit to my/our HK$ saving /current account with the above bank.
+                        <label for="credit">將款項存入本人/吾等/本公司在下列銀行之港幣儲蓄/往來帳戶.-
+                            Credit to my/our HK$ saving /current account with the below bank.
                         </label>
                     </li>
                 </ol>
