--- a/margin.html
+++ b/margin.html
@@ -2101,7 +2101,7 @@
         </div>
 
         <!--page7-->
-        <div class="container">
+        <div class="container {{{electronic_trading_class}}}">
 
 
 
