--- a/margin.html
+++ b/margin.html
@@ -2116,7 +2116,7 @@
         </div>
 
         <!--page7-->
-        <div class="container">
+        <div class="container {{{electronic_trading_class}}}">
 
 
 
