electronic_trading - exclude fill
(cherry picked from commit 26068112e97cd3e1d9cb9d95001662fa370c3a26)

--- a/cash.html
+++ b/cash.html
@@ -1995,7 +1995,7 @@
         </div>
 
         <!--page7-->
-        <div style="page-break-after: always;" class="container pb85 {{{electronic_trading_class}}}">
+        <div style="page-break-after: always;" class="container pb85 {{{account_info.electronic_trading_class}}}">
             <div class="clear mt-15"></div>
             <div class="header mt-15">
                 <div class="head-left">
