--- a/cash.html
+++ b/cash.html
@@ -2011,7 +2011,7 @@
         </div>
 
         <!--page7-->
-        <div style="page-break-after: always;" class="container pb85 {{{account_info.electronic_trading_class}}} xxx">
+        <div style="page-break-after: always;" class="container pb85 {{{account_info.electronic_trading_class}}}">
             <div class="clear mt-15"></div>
             <div class="header mt-15">
                 <div class="head-left">
