--- a/cash.html
+++ b/cash.html
@@ -1699,7 +1699,7 @@
         </div>
 
         <!--page5-->
-        <div class="container">
+        <div class="container {{{standing_authority_class}}}">
             <div class="header mt-20">
                 <div class="head-left">
                     <img src="images/logo.jpg" alt="logo">
