* phone number - remove double plus

--- a/margin.html
+++ b/margin.html
@@ -1116,7 +1116,7 @@
                     </td>
                     <td class="height50">
 
-                        <strong>+{{{account_info.authorised_person_1_country_phone_code}}} {{{account_info.authorised_person_1_phone_number}}}</strong>
+                        <strong>{{{account_info.authorised_person_1_country_phone_code}}} {{{account_info.authorised_person_1_phone_number}}}</strong>
                     </td>
 
                 </tr>
@@ -1160,7 +1160,7 @@
                     </td>
                     <td class="height50">
 
-                        <strong>+{{{account_info.authorised_person_2_country_phone_code}}} {{{account_info.authorised_person_2_phone_number}}}</strong>
+                        <strong>{{{account_info.authorised_person_2_country_phone_code}}} {{{account_info.authorised_person_2_phone_number}}}</strong>
                     </td>
 
                 </tr>
@@ -1205,7 +1205,7 @@
                     </td>
                     <td class="height50">
 
-                        <strong>+{{{account_info.authorised_person_3_country_phone_code}}} {{{account_info.authorised_person_3_phone_number}}}</strong>
+                        <strong>{{{account_info.authorised_person_3_country_phone_code}}} {{{account_info.authorised_person_3_phone_number}}}</strong>
                     </td>
 
                 </tr>
