* phone number - remove double plus

--- a/margin.html
+++ b/margin.html
@@ -1115,7 +1115,7 @@
                     </td>
                     <td class="height50">
 
-                        <strong>+{{{account_info.authorised_person_1_country_phone_code}}} {{{account_info.authorised_person_1_phone_number}}}</strong>
+                        <strong>{{{account_info.authorised_person_1_country_phone_code}}} {{{account_info.authorised_person_1_phone_number}}}</strong>
                     </td>
 
                 </tr>
@@ -1157,7 +1157,7 @@
                     </td>
                     <td class="height50">
 
-                        <strong>+{{{account_info.authorised_person_2_country_phone_code}}} {{{account_info.authorised_person_2_phone_number}}}</strong>
+                        <strong>{{{account_info.authorised_person_2_country_phone_code}}} {{{account_info.authorised_person_2_phone_number}}}</strong>
                     </td>
 
                 </tr>
@@ -1200,7 +1200,7 @@
                     </td>
                     <td class="height50">
 
-                        <strong>+{{{account_info.authorised_person_3_country_phone_code}}} {{{account_info.authorised_person_3_phone_number}}}</strong>
+                        <strong>{{{account_info.authorised_person_3_country_phone_code}}} {{{account_info.authorised_person_3_phone_number}}}</strong>
                     </td>
 
                 </tr>
