--- a/cash.html
+++ b/cash.html
@@ -1050,7 +1050,7 @@
                     </td>
                     <td class="height50">
 
-                        <strong>+{{{account_info.authorised_person_1_country_phone_code}}} {{{account_info.authorised_person_1_phone_number}}}</strong>
+                        <strong>{{{account_info.authorised_person_1_country_phone_code}}} {{{account_info.authorised_person_1_phone_number}}}</strong>
                     </td>
 
                 </tr>
@@ -1092,7 +1092,7 @@
                     </td>
                     <td class="height50">
 
-                        <strong>+{{{account_info.authorised_person_2_country_phone_code}}} {{{account_info.authorised_person_2_phone_number}}}</strong>
+                        <strong>{{{account_info.authorised_person_2_country_phone_code}}} {{{account_info.authorised_person_2_phone_number}}}</strong>
                     </td>
 
                 </tr>
@@ -1135,7 +1135,7 @@
                     </td>
                     <td class="height50">
 
-                        <strong>+{{{account_info.authorised_person_3_country_phone_code}}} {{{account_info.authorised_person_3_phone_number}}}</strong>
+                        <strong>{{{account_info.authorised_person_3_country_phone_code}}} {{{account_info.authorised_person_3_phone_number}}}</strong>
                     </td>
 
                 </tr>
